syntax = "proto3";

option csharp_namespace = "Codibre.GrpcSqlProxy.Api";

package SqlProxy;

service SqlProxy {
  rpc Run (stream SqlRequest) returns (stream SqlResponse);
}

message SqlRequest {
  string id = 1;
  repeated string schema = 2;
  string connString = 3;
  string query = 4;
  int32 packetSize = 5;
  bool compress = 6;
  optional string params = 7;
}

enum LastEnum {
  Mid = 0;
  SetLast = 1;
  Last = 2;
}

message SqlResponse {
  string id = 1;
  optional bytes result = 2;
  optional string error = 3;
  LastEnum last = 4;
  bool compressed = 5;
  int32 index = 6;
}
